force-app/main/default/objects/Project_Construction_Stages__c/fields/Actual_date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Actual_date_of_completion__c</fullName>
    <label>Actual date of completion</label>
    <type>Date</type>
</CustomField>