force-app/main/default/objects/Project_Construction_Stages__c/fields/Est_Date_of_Construction_Stage_Completio__c.field-meta.xml
<CustomField>
    <fullName>Est_Date_of_Construction_Stage_Completio__c</fullName>
    <label>Est Date of Construction Stage Completio</label>
    <type>Date</type>
</CustomField>