force-app/main/default/objects/Project_Construction_Stages__c/fields/Master_Project__c.field-meta.xml
<CustomField>
    <fullName>Master_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Project</label>
    <referenceTo>Master_Project__c</referenceTo>
    <relationshipLabel>Project Construction Stages</relationshipLabel>
    <relationshipName>Project_Construction_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>