force-app/main/default/objects/Project_Construction_Stages__c/fields/Planned_date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Planned_date_of_completion__c</fullName>
    <label>Planned date of completion</label>
    <type>Date</type>
</CustomField>