force-app/main/default/objects/Project_Construction_Stages__c/fields/PS_Tower__c.field-meta.xml
<CustomField>
    <fullName>PS_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>PropStrength__Tower__c</referenceTo>
    <relationshipLabel>Project Construction Stages</relationshipLabel>
    <relationshipName>Project_Construction_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>