force-app/main/default/objects/Project_Construction_Stages__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup the tower that this particular construction stage belongs to</description>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Project Construction Stages</relationshipLabel>
    <relationshipName>Project_Construction_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>