force-app/main/default/objects/Project_Construction_Stages__c/fields/Unique_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Unique_Sequence_No__c</fullName>
    <label>Unique Sequence No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>